--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -1,4 +1,4 @@
-name: Post welcome comment
+name: Post welcome comment 😁
 on:
   pull_request:
     types: [opened]
@@ -13,3 +13,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_URL: ${{ github.event.pull_request.html_url }}
+
